kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: homeassistant
  name: homeassistant
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeassistant
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      hostNetwork: true
      containers:
        - image: homeassistant/home-assistant:%(version)s
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8123
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 30
          name: homeassistant
          ports:
            - containerPort: 8123
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8123
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 30
          volumeMounts:
            - mountPath: /config
              name: config-volume
      restartPolicy: Always
      securityContext:
        fsGroup: 65534
        runAsGroup: 65534
        runAsNonRoot: true
        runAsUser: 65534
      terminationGracePeriodSeconds: 300
      volumes:
        - persistentVolumeClaim:
            claimName: homeassistant
          name: config-volume
