kubernetes/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: default
  labels:
    app: homeassistant
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8123
  type: ClusterIP
  selector:
    app: homeassistant
