kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: homeassistant
  namespace: default
  labels:
    app: homeassistant
spec:
  rules:
  - host: homeassistant.ibidem.homeip.net
    http:
      paths:
      - backend:
          serviceName: homeassistant
          servicePort: http
        path: /
